Fix control overflow

--- a/src/networkChart.scss
+++ b/src/networkChart.scss
@@ -6,9 +6,9 @@
 }
 
 .controls {
-    margin: 10px 0 10px 50px;
+    margin: 10px 0 10px 0;
     display: flex;
-    max-height: 50px;
+    max-height: 40px;
 }
 
 .sticky{
